BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Account_External_ID_Map_vod__c.object
<CustomObject>
    <description>Mapping object for Account tracking</description>
    <fields>
        <fullName>Account_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account which maps to the 3rd Party External Id and/or User Cookie</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account External ID Map</relationshipLabel>
        <relationshipName>Account_External_ID_Map_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Domain_vod__c</fullName>
        <description>Domain which provided the Third Party External ID</description>
        <label>Domain</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_Party_External_ID_vod__c</fullName>
        <description>External ID of a user provided by a 3rd Party Site</description>
        <label>Third Party External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Cookie_vod__c</fullName>
        <description>Veeva User Cookie identifier</description>
        <label>User Cookie</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VExternal_Id_vod__c</fullName>
        <description>External Id used by Veeva CRM</description>
        <externalId>true</externalId>
        <label>VExternal Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Account External ID Map</label>
    <nameField>
        <displayFormat>AEM-{000000000}</displayFormat>
        <label>Account External ID Map Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account External ID Map</pluralLabel>
    <recordTypes>
        <fullName>Cobrowse_vod</fullName>
        <active>false</active>
        <description>Used for records created by CoBrowse</description>
        <label>Cobrowse_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Engage_vod</fullName>
        <active>true</active>
        <description>Used for records created via Engage</description>
        <label>Engage_vod</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>